--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "mongoose": "^6.6.1",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "request": "^2.88.2"
   }
 }
